--- a/PLC Exam/css/main.css
+++ b/PLC Exam/css/main.css
@@ -8,8 +8,6 @@
 
 
 body {
-    min-height: 100vh;
-
     background-image: url('../img/wallpaper/registration_back.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -22,13 +20,11 @@ body {
 
     width: 440px;
     margin: 0 auto;
+    padding: 150px 0;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-    /* DELETE */
-    margin-top: 150px;
 }
 
 .registration_form {
@@ -38,6 +34,7 @@ body {
 }
 
 .registration_inputContainer {
+    margin-bottom: 20px; 
     padding: 5px 0;
 
     border-radius: 5px;
@@ -45,10 +42,6 @@ body {
 
     display: flex;
     align-items: center;
-}
-
-.registration_form .registration_inputContainer:first-child {
-    margin-bottom: 20px;   
 }
 
 .registration_inputContainer svg {
@@ -72,7 +65,13 @@ body {
     font-weight: 300;
 }
 
+#student_password {
+    display: none;
+}
+
 .registration_submitBtn {
+    display: none;
+
     width: 100%;
     margin-top: 40px;
 
@@ -99,4 +98,70 @@ body {
     color: #FFFFFF;
     border-color: #FFFFFF;
     background-color: #0A7DCE;
+}
+
+
+.camera_container {
+    height: 210px;
+
+    margin-bottom: 20px;
+    padding: 5px 0;
+
+    border-radius: 5px;
+    border: 1px solid white;
+
+    position: relative;
+}
+
+.camera_btns {
+    margin-bottom: 20px;
+
+    list-style-type: none;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.camera_btns li button {
+    width: 100%;
+
+    padding: 10px 0;
+
+    color: #0A7DCE;
+    font-weight: 600;
+
+    border-radius: 5px;
+    border: 1.5px solid #FFFFFF;
+
+    background-color: #FFFFFF;
+    box-shadow: 0px 5.01px 0.19px 0px #0000000F;
+
+    cursor: pointer;
+
+    transition: all 0.3s ease;
+}
+
+
+.camera_btns li button:hover {
+    color: #FFFFFF;
+
+    background-color: #0A7DCE;
+}
+
+#snap {
+    display: none;
+}
+
+
+#student_photo {
+    display: none;
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 5px;
+
+    top: 0;
+    left: 0;
 }
